mobile display: make sure logo doesn't get cut off or require horizontal scroll

--- a/_sass/diy.scss
+++ b/_sass/diy.scss
@@ -71,3 +71,7 @@ h4 {
 .toc-container {
 	margin-bottom: 1.2rem;
 }
+
+.large-logo {
+	max-width: 100%;
+}
